<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG2"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/linearLayout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            fontPath="fonts/Roboto-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_enter_keyword"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_xxxlarge"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_search_form"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        android:background="@color/colorWhite">

        <LinearLayout
        android:id="@+id/linearLayout_fs_search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search_keyword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:hint="@string/txt_search_keyword"
            android:textColorHint="@color/colorTextLighter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/txt_btn_search"
            android:theme="@style/Button.Primary" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

    <!-- We need this loading wheel, only when loading more -->
    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/search_progress_wheel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="top|center"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        wheel:matProg_barColor="@color/colorPrimaryDark"
        wheel:matProg_progressIndeterminate="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
